ui/pageview.cpp
@@ -3171,8 +3171,6 @@ void PageView::wheelEvent(QWheelEvent *e)
             }
         }
     }
-
-    updateCursor();
 }
 
 bool PageView::viewportEvent(QEvent *e)
@@ -3225,6 +3223,8 @@ void PageView::scrollContentsBy(int dx, int dy)
 
     for (const QRect &rect : rgn)
         viewport()->update(rect);
+
+    updateCursor();
 }
 // END widget events
 
@@ -3895,12 +3895,15 @@ void PageView::updateCursor(const QPoint p)
 
     // detect the underlaying page (if present)
     PageViewItem *pageItem = pickItemOnPoint(p.x(), p.y());
+    QScroller::State scrollerState = d->scroller->state();
 
     if (d->annotator && d->annotator->active()) {
         if (pageItem || d->annotator->annotating())
             setCursor(d->annotator->cursor());
         else
             setCursor(Qt::ForbiddenCursor);
+    } else if (scrollerState == QScroller::Pressed || scrollerState == QScroller::Dragging) {
+        setCursor(Qt::ClosedHandCursor);
     } else if (pageItem) {
         double nX = pageItem->absToPageX(p.x());
         double nY = pageItem->absToPageY(p.y());
